--- a/index.html
+++ b/index.html
@@ -4,11 +4,127 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+
 </head>
-<body>
+<body class="p-5 bg-danger-subtle">
+
+    <!-- Header -->
+    <header>
+        <div class="container py-5 ">
+            <h1 class="text-center py-5">Meet our Team</h1>
+            <p class="text-secondary text-center">Lorem ipsum dolorLorem ipsum dolorLorem ipsum dolorLorem ipsum
+                dolorLorem ipsum dolor</p>
+        </div>
+    </header>
+
     <main>
-        
+        <section class="container py-3">
+
+            <div class="row g-4 justify-content-between">
+                <!-- Team Member Card -->
+                <div class="col-12 col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-4 card-img">
+                                <img src="" class="img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title mb-1"></h5>
+                                    <p class="card-text text-muted mb-1"></p>
+                                    <a href="" class="text-decoration-none small"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+               <div class="col-12 col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-4 card-img">
+                                <img src="" class="img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title mb-1"></h5>
+                                    <p class="card-text text-muted mb-1"></p>
+                                    <a href="" class="text-decoration-none small"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-4 card-img">
+                                <img src="" class="img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title mb-1"></h5>
+                                    <p class="card-text text-muted mb-1"></p>
+                                    <a href="" class="text-decoration-none small"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-4 card-img">
+                                <img src="" class="img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title mb-1"></h5>
+                                    <p class="card-text text-muted mb-1"></p>
+                                    <a href="" class="text-decoration-none small"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-4 card-img">
+                                <img src="" class="img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title mb-1"></h5>
+                                    <p class="card-text text-muted mb-1"></p>
+                                    <a href="" class="text-decoration-none small"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-4 card-img">
+                                <img src="" class="img-fluid">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title mb-1"></h5>
+                                    <p class="card-text text-muted mb-1"></p>
+                                    <a href="" class="text-decoration-none small"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+        <script src="js/script.js"></script>
     </main>
-    <script src="js/script.js"></script>
 </body>
+
 </html>
