--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
 
 </head>
+
 <body class="p-5 bg-danger-subtle">
 
     <!-- Header -->
@@ -20,7 +22,7 @@
     </header>
 
     <main>
-        <section class="container py-3">
+        <section class="cards-container py-3">
 
             <div class="row g-4 justify-content-between">
                 <!-- Team Member Card -->
@@ -41,7 +43,7 @@
                     </div>
                 </div>
 
-               <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4">
                     <div class="card shadow-sm h-100">
                         <div class="row g-0 align-items-center">
                             <div class="col-4 card-img">
