--- a/index.html
+++ b/index.html
@@ -22,107 +22,8 @@
     </header>
 
     <main>
-        <section class="cards-container d-flex py-3">
-
-            <div class="row g-4 justify-content-between">
+        <section class="cards-container">
                 <!-- Team Member Card -->
-                <div class="col-12 col-md-4">
-                    <div class="card shadow-sm h-100">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-4 card-img">
-                                <img src="" class="img-fluid">
-                            </div>
-                            <div class="col-8">
-                                <div class="card-body">
-                                    <h5 class="card-title mb-1"></h5>
-                                    <p class="card-text text-muted mb-1"></p>
-                                    <a href="" class="text-decoration-none small"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-4">
-                    <div class="card shadow-sm h-100">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-4 card-img">
-                                <img src="" class="img-fluid">
-                            </div>
-                            <div class="col-8">
-                                <div class="card-body">
-                                    <h5 class="card-title mb-1"></h5>
-                                    <p class="card-text text-muted mb-1"></p>
-                                    <a href="" class="text-decoration-none small"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4">
-                    <div class="card shadow-sm h-100">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-4 card-img">
-                                <img src="" class="img-fluid">
-                            </div>
-                            <div class="col-8">
-                                <div class="card-body">
-                                    <h5 class="card-title mb-1"></h5>
-                                    <p class="card-text text-muted mb-1"></p>
-                                    <a href="" class="text-decoration-none small"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4">
-                    <div class="card shadow-sm h-100">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-4 card-img">
-                                <img src="" class="img-fluid">
-                            </div>
-                            <div class="col-8">
-                                <div class="card-body">
-                                    <h5 class="card-title mb-1"></h5>
-                                    <p class="card-text text-muted mb-1"></p>
-                                    <a href="" class="text-decoration-none small"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4">
-                    <div class="card shadow-sm h-100">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-4 card-img">
-                                <img src="" class="img-fluid">
-                            </div>
-                            <div class="col-8">
-                                <div class="card-body">
-                                    <h5 class="card-title mb-1"></h5>
-                                    <p class="card-text text-muted mb-1"></p>
-                                    <a href="" class="text-decoration-none small"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4">
-                    <div class="card shadow-sm h-100">
-                        <div class="row g-0 align-items-center">
-                            <div class="col-4 card-img">
-                                <img src="" class="img-fluid">
-                            </div>
-                            <div class="col-8">
-                                <div class="card-body">
-                                    <h5 class="card-title mb-1"></h5>
-                                    <p class="card-text text-muted mb-1"></p>
-                                    <a href="" class="text-decoration-none small"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
         </section>
 
         <script src="js/script.js"></script>
