--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team members</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
@@ -22,9 +22,9 @@
     </header>
 
     <main>
-        <section class="cards-container">
-                <!-- Team Member Card -->
-        </section>
+        <div class="cards-container d-flex flex-wrap">
+                <!-- Team Member Card JS-->
+        </div>
 
         <script src="js/script.js"></script>
     </main>
