--- a/index.html
+++ b/index.html
@@ -26,6 +26,33 @@
                 <!-- Team Member Card JS-->
         </div>
 
+        <div class="col-12 py-5">
+            <h2 class="text-center py-5">Join our Team</h2>
+            <form action="" class="row p-1">
+
+                <div class="d-flex justify-content-between mb-5">
+                    <div class="col">
+                        <label class="form-label" for="name">Nome e cognome</label>
+                        <input class="form-control" type="text" id="name" />
+                    </div>
+                    <div class="col mx-3">
+                        <label class="form-label" for="role">Nome e cognome</label>
+                        <input class="form-control" type="text" id="role" />
+                    </div>
+                    <div class="col ">
+                        <label class="form-label" for="email">Nome e cognome</label>
+                        <input class="form-control" type="text" id="email" />
+                    </div>
+                </div>
+
+                <div class="col d-flex justify-content-center mb-4">
+                    <button class="btn btn-success mx-2" type="submit">Create</button>
+                    <button type="reset" class="btn btn-danger">Cancel</button>
+                </div>
+
+            </form>
+        </div>
+
         <script src="js/script.js"></script>
     </main>
 </body>
