Feat: Input form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <div class="container py-5 ">
             <h1 class="text-center py-5">Meet our Team</h1>
             <p class="text-secondary text-center">Lorem ipsum dolorLorem ipsum dolorLorem ipsum dolorLorem ipsum
-                dolorLorem ipsum dolor</p>
+                dolorLorem ipsum dolor Lorem ipsum dolorLorem ipsum dolorLorem ipsum dolorLorem ipsum
+                dolorLorem ipsum dolor Lorem ipsum dolorLorem ipsum dolorLorem ipsum dolorLorem ipsum
+                dolorLorem ipsum dolor </p>
         </div>
     </header>
 
@@ -26,21 +28,25 @@
                 <!-- Team Member Card JS-->
         </div>
 
-        <div class="col-12 py-5">
+        <div class="newMember col-12 py-5">
             <h2 class="text-center py-5">Join our Team</h2>
-            <form action="" class="row p-1">
+            <form action="" class="row ">
 
                 <div class="d-flex justify-content-between mb-5">
                     <div class="col">
-                        <label class="form-label" for="name">Nome e cognome</label>
+                        <label class="form-label" for="img">Your photo</label>
+                        <input class="form-control" type="file" id="img" accept="image/*"/>
+                    </div>
+                    <div class="col">
+                        <label class="form-label" for="name">Your name</label>
                         <input class="form-control" type="text" id="name" />
                     </div>
-                    <div class="col mx-3">
-                        <label class="form-label" for="role">Nome e cognome</label>
+                    <div class="col">
+                        <label class="form-label" for="role">Your role</label>
                         <input class="form-control" type="text" id="role" />
                     </div>
                     <div class="col ">
-                        <label class="form-label" for="email">Nome e cognome</label>
+                        <label class="form-label" for="email">Your email</label>
                         <input class="form-control" type="text" id="email" />
                     </div>
                 </div>
